--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.jaiberibe</groupId>
+	<artifactId>Ciclo3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Ciclo3</name>
 	<description>Proyecto para ciclo 3 de Jaiber Uribe</description>
