--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.12</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.jaiberibe</groupId>
+	<groupId>com.jaiberuribe</groupId>
 	<artifactId>Ciclo3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Ciclo3</name>
@@ -58,6 +58,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
 		</plugins>
 	</build>
 
