--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = update
-server.port=8080
+spring.datasource.url=jdbc:mysql://10.0.0.40:3306/mysql_jaiber_ciclo3
+spring.datasource.username=admin
+spring.datasource.password=Arboleda2022
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.generate-ddl=true
+server.port=80
