--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://10.0.0.40:3306/mysql_jaiber_ciclo3
 spring.datasource.username=admin
 spring.datasource.password=Arboleda2022
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl=true
 server.port=80
