--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
