--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://129.146.75.232/:3306/Ciclo3
+s.pring.datasourceurl=jdbc:mysql://129.146.75.232/:3306/Ciclo3
 spring.datasource.username=root
 spring.datasource.password=Arboleda2022*
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 server.port=80
