--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasourceurl=jdbc:mysql://129.146.75.232:3306/ortesis
+spring.datasource.url=jdbc:mysql://129.146.75.232/:3306/Ciclo3
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username=root
 spring.datasource.password=Arboleda2022*
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 server.port=80
 
