--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://129.146.75.232/:3306/Ciclo3
+spring.datasource.url=jdbc:mysql://129.146.75.232/:3306/ortesis
 spring.datasource.username=root
 spring.datasource.password=Arboleda2022*
 spring.jpa.hibernate.ddl-auto = update
