--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://129.146.75.232/:3306/ortesis
-spring.datasource.username=root
-spring.datasource.password=Arboleda2022*
+spring.datasource.url=jdbc:h2:mem:testdb1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 server.port=80
