--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:testdb1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://10.0.0.40/mysql_jaiber_ciclo3
+spring.datasource.username=admin
+spring.datasource.password=Arboleda2022
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=true
 server.port=80
