--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://10.0.0.40/mysql_jaiber_ciclo3
+spring.datasource.url=jdbc:mysql://10.0.0.162:3306/mysql20221110
 spring.datasource.username=admin
-spring.datasource.password=Arboleda2022
+spring.datasource.password=Arboleda2022*
 spring.jpa.hibernate.ddl-auto=create
 server.port=80
