--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.0.0.162:3306/ciclo3
+spring.datasource.url=jdbc:mysql://10.0.0.162:3306/Ciclo3
 spring.datasource.username=admin
 spring.datasource.password=Arboleda2022*
 spring.jpa.hibernate.ddl-auto=update
