--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://10.0.0.162:3306/Ciclo3
-spring.datasource.username=admin
-spring.datasource.password=Arboleda2022*
+spring.datasource.url=jdbc:h2:mem:testdb1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
-server.port=80
+spring.jpa.generate-ddl=true
+server.port=8080
